some GUI improvements
User can browse the location of an any FAT32 image file using the File Open Dialog.
Adjust widths and heights of some JavaFXcomponents for better look.
The application can run without an integrated development environment(IDE).
The application can run double clicking on its JAR file.
Some tabs need to appear after an FAT32 image file selection.