@@ -18,6 +18,8 @@
 package javafxapplication1;
 
 import java.io.File;
+
+import com.sun.javafx.scene.control.behavior.TabPaneBehavior;
 import javafx.event.ActionEvent;
 import java.io.IOException;
 import java.util.ArrayList;
@@ -30,24 +32,17 @@ import javafx.collections.ObservableList;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Scene;
-import javafx.scene.control.Button;
+import javafx.scene.control.*;
 
 import javafx.event.EventHandler;
 import javafx.scene.Node;
-import javafx.scene.control.Alert;
 import javafx.scene.control.Alert.AlertType;
 
-import javafx.scene.control.Label;
-import javafx.scene.control.Tab;
-import javafx.scene.control.TabPane;
-import javafx.scene.control.TableColumn;
-import javafx.scene.control.TableView;
-import javafx.scene.control.TextArea;
-import javafx.scene.control.TreeItem;
-import javafx.scene.control.TreeView;
 import javafx.scene.control.cell.PropertyValueFactory;
+import javafx.scene.control.skin.TabPaneSkin;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import javafx.scene.layout.ColumnConstraints;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.HBox;
 //import javafx.scene.web.WebEngine;
@@ -66,6 +61,12 @@ import fat32libproject.enums.FsNodeFileSystemType;
 import fat32libproject.helpers.OtherHelper;
 import fat32libproject.structures.UnallocatedSpaceContainerNode;
 
+
+/*
+ TO RUN THIS APP, DOWNLOAD JAVAFX LIB AND ADD THIS VM OPTIONS BELOW CONTAINING ITS PATH:
+  --module-path "C:\Users\\u\Downloads\APPP\openjfx-19.0.2.1_windows-x64_bin-sdk\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml
+*/
+
 /**
  *
  * @author Turker Ozturk
@@ -80,7 +81,25 @@ public class Fat32Gui extends Application {
     private TreeView<Object> treeView;
     // private TableView table;
     //https://docs.oracle.com/javafx/2/ui_controls/table-view.htm
-    private TableView<Object> table = new TableView<>();
+    private TableView<Object> table;// = new TableView<>();
+    TableColumn nameTableColumn;
+    TableColumn sizeTableColumn;
+    TableColumn sizeAsByteTableColumn;
+    TableColumn typeTableColumn;
+    TableColumn dateModifiedTableColumn;
+    TableColumn deletedTableColumn;
+    TableColumn absolutePathTableColumn;
+    TableColumn firstDataClusterIdOfFileTableColumn;
+
+    Button buttonExtractSelected;
+    TextArea textArea;
+    GridPane gridPane;
+    int gridMiddleX = 8; //TODO
+    int gridMiddleY = 9; //TODO
+
+    int usttekilerMinHeight = 450;
+
+    Button button;
 
     //@FXML
 //    private WebView webview;
@@ -90,68 +109,85 @@ public class Fat32Gui extends Application {
 
    // private String logicalDiskImageUri = "C:\\tmp\\fat32logical.img";
   //  private String logicalDiskImageUri = "C:\\tmp\\fat32images\\1gblogicalfat32.dig"; // gercek 1 gb bellek vardi sonra kayboldu, o imaj. bu konsola pathleri yazar ama sonra Directory.java:143 kodumda arraycopy: length -32 is negative hatası verir.
-    private String logicalDiskImageUri = "C:\\tmp\\fat32images\\USBLogicalFAT321GBFSF.dig"; // bu calisiyor problemsiz. benim olusturdugum imaj.
+  //TODO BU CALISIYOR
+    private String logicalDiskImageUri;// = "C:\\tmp\\fat32images\\USBLogicalFAT321GBFSF.dig"; // bu calisiyor problemsiz. benim olusturdugum imaj.
 
 
+    TabPane tabPane;
+    Tab tab0;
+    Tab tab;
+    Tab tab2;
+    Tab tab3;
+    Tab tab4;
+
+    TextArea textAreaPartitionInformation;
+    TextArea textAreaFsNodeHelp;
+    TextArea textAreaTodo;
 
     //Image nodeImage = new Image(getClass().getResourceAsStream("duke_16x16.png"));
     @Override
     public void start(Stage primaryStage) throws IOException {
 
-        // <editor-fold desc="Dosya Secici" defaultstate="collapsed">
-        FileChooser fileChooser = new FileChooser();
-        final Button openButton = new Button("Open Logical FAT32 Image(Bu şu an çalışmıyor. \r\n Logical Fat 32 imaj dosyasını C:\\tmp\\fat32logical.img olacak şekilde yerleştirip \r\n"
-                + "programı çalıştırırsanız browser sekmesine tıkladığınızda dosya sistemini göreceksiniz.)");
-        openButton.setOnAction(
-                new EventHandler<ActionEvent>() {
-            @Override
-            public void handle(final ActionEvent e) {
-                fileChooser.setTitle("Open FAT32 Partition(Logical) Image");
-                File file = fileChooser.showOpenDialog(primaryStage);
-                if (file != null) {
-                    logicalDiskImageUri = file.getAbsolutePath();
-                }
-            }
-        }
-        );
+
 
         // </editor-fold>
         // <editor-fold desc="Tab Panosu" defaultstate="collapsed">
-        TabPane tabPane = new TabPane();
-        
-        Tab tab0 = new Tab();
+        tabPane = new TabPane();
+
+        tab0 = new Tab();
         tab0.setText("Open Image");
         //tab.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
         tabPane.getTabs().add(tab0);
-        
-        Tab tab = new Tab();
+
+        tab = new Tab();
         tab.setText("Browser");
         //tab.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
         tabPane.getTabs().add(tab);
-        
+
+
+        // <editor-fold desc="Dosya Secici" defaultstate="collapsed">
+        FileChooser fileChooser = new FileChooser();
+        final Button openButton = new Button("Click Here to browse your logical FAT32 partition iamage file..\r\n" +
+                 "You will see its contents on \"Browser\" tab.)");
+        openButton.setOnAction(
+                new EventHandler<ActionEvent>() {
+                    @Override
+                    public void handle(final ActionEvent e) {
+                        fileChooser.setTitle("Open FAT32 Partition(Logical) Image");
+                        File file = fileChooser.showOpenDialog(primaryStage);
+                        if (file != null) {
+                            logicalDiskImageUri = file.getAbsolutePath();
+                            try {
+                                baslaParsellemeye(primaryStage);
+
+                                //https://stackoverflow.com/questions/19025268/javafx-tabpane-switch-tabs-only-when-focused
+                                //TabPaneSkin skin = (TabPaneSkin) tabPane.getSkin(); //https://stackoverflow.com/questions/19048127/java-8-javafx-getbehavior-alternative
+                                //or BehaviorSkinBase skin = (BehaviorSkinBase) tabPane.getSkin();
+                                //TabPaneBehavior tabPaneBehavior = (TabPaneBehavior) tabPane.getSkin()..getBehavior();
+                                //tabPaneBehavior.selectNextTab();
+                                tabPane.getSelectionModel().select(1);
+
+
+
+                            } catch (IOException ex) {
+                                throw new RuntimeException(ex);
+                            }
+
+                        }
+                    }
+                }
+        );
         tab0.setContent(openButton);
 
-        Tab tab2 = new Tab();
-        tab2.setText("Filesystem Info");
-        //tab2.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
-        tabPane.getTabs().add(tab2);
 
-        Tab tab3 = new Tab();
-        tab3.setText("FsNode Help");
-        //tab2.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
-        tabPane.getTabs().add(tab3);
 
-        Tab tab4 = new Tab();
-        tab4.setText("FsNode TODO");
-        //tab2.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
-        tabPane.getTabs().add(tab4);
 
         /*
         Tab tab5 = new Tab();
         tab5.setText("Methods Help");
         //tab5.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
         tabPane.getTabs().add(tab5);
-        //WebView - to display, browse web pages.  
+        //WebView - to display, browse web pages.
         this.webview = new WebView();
         this.webview.setMaxWidth(800);
         this.webview.setMaxHeight(500);
@@ -165,46 +201,43 @@ public class Fat32Gui extends Application {
         webengine.load(f.toURI().toString());
         tab5.setContent(this.webview);
          */
-        TextArea textAreaPartitionInformation = new TextArea();
-        TextArea textAreaFsNodeHelp = new TextArea();
-        TextArea textAreaTodo = new TextArea();
-        textAreaTodo.setText("TODO Dosya gezgininde klasore ikinci kez tiklayinca da refresh etmesi gerekiyor.\r\n"
-                + "TODO Slackspace için de tree yapısı oluştur.\r\n"
-                + "BİTTİ folder extraction metodu da yaz.\r\n"
-                + "TODO slack extraction metodu da yaz.\r\n"
-                + "TODO gui kodundaki satırları derli toplu hale getir.\r\n"
-                + "TODO herşey bittiğinde sadece kütüphanenin kullanılması için gerekli olan methodları public bırak.\r\n");
 
-        tab4.setContent(textAreaTodo);
         // </editor-fold>
 
         // <editor-fold desc="Dosya Klasor Tablosu" defaultstate="collapsed">
         //NOT: tum sutunlari eklemek zorunda degiliz viewa. Yani burada tanimlariz fakat istemiyorsak eklemeyiz.
         table = new TableView();
 
-        TableColumn nameTableColumn = new TableColumn("Name");
+        nameTableColumn = new TableColumn("Name");
         nameTableColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
+        nameTableColumn.setMinWidth(240);
 
-        TableColumn sizeTableColumn = new TableColumn("Size");
+        sizeTableColumn = new TableColumn("Size");
         sizeTableColumn.setCellValueFactory(new PropertyValueFactory<>("size"));
+        sizeTableColumn.setMinWidth(50);
+        sizeTableColumn.setMaxWidth(50);
+
         //size.setCellValueFactory(new PropertyValueFactory<FsNode, Long>("sizeTableColumn")); Buna gerek yokmuş. zaten hangi classı koysamiçinde o isim varsa problemsiz çalışmasından anlamalıydım.
 
-        TableColumn sizeAsByteTableColumn = new TableColumn("Size as Byte");
+        sizeAsByteTableColumn = new TableColumn("Size as Byte");
+        sizeAsByteTableColumn.setMinWidth(50);
         sizeAsByteTableColumn.setCellValueFactory(new PropertyValueFactory<>("sizeAsBytes"));
 
-        TableColumn typeTableColumn = new TableColumn("Type");
+        typeTableColumn = new TableColumn("Type");
+        typeTableColumn.setMinWidth(120);
         typeTableColumn.setCellValueFactory(new PropertyValueFactory<>("entryType"));
 
-        TableColumn dateModifiedTableColumn = new TableColumn("Date Modified");
+        dateModifiedTableColumn = new TableColumn("Date Modified");
+        dateModifiedTableColumn.setMinWidth(200);
         dateModifiedTableColumn.setCellValueFactory(new PropertyValueFactory<>("writtenDate"));
 
-        TableColumn deletedTableColumn = new TableColumn("Deleted");
+        deletedTableColumn = new TableColumn("Deleted");
         deletedTableColumn.setCellValueFactory(new PropertyValueFactory<>("deleted"));
 
-        TableColumn absolutePathTableColumn = new TableColumn("Absolute Path");
+        absolutePathTableColumn = new TableColumn("Absolute Path");
         absolutePathTableColumn.setCellValueFactory(new PropertyValueFactory<>("absolutePath"));
 
-        TableColumn firstDataClusterIdOfFileTableColumn = new TableColumn("Cluster Id");
+        firstDataClusterIdOfFileTableColumn = new TableColumn("Cluster Id");
         firstDataClusterIdOfFileTableColumn.setCellValueFactory(new PropertyValueFactory<>("firstDataClusterIdOfFile"));
 
         typeTableColumn.setSortType(TableColumn.SortType.ASCENDING);
@@ -215,36 +248,41 @@ public class Fat32Gui extends Application {
         // </editor-fold>
         // <editor-fold desc="Grid Panosu" defaultstate="collapsed">
         //  https://www.tutorialspoint.com/javafx/javafx_css.htm
-        //Creating a Grid Pane 
-        GridPane gridPane = new GridPane();
-        //Setting sizeTableColumn for the pane 
+        //Creating a Grid Pane
+        gridPane = new GridPane();
+        //Setting sizeTableColumn for the pane
         // gridPane.setMinSize(1200, 800);
-        //Setting the padding  
+        //Setting the padding
         gridPane.setPadding(new Insets(0, 0, 0, 0));
-        //Setting the vertical and horizontal gaps between the columns 
+        //Setting the vertical and horizontal gaps between the columns
         gridPane.setVgap(1);
         gridPane.setHgap(1);
-        //Setting the Grid alignment 
+        //Setting the Grid alignment
         gridPane.setAlignment(Pos.TOP_LEFT);
+
+        ColumnConstraints cc = new ColumnConstraints();
+        cc.setMinWidth(300);
+       // cc.setPercentWidth(100/2);
+        gridPane.getColumnConstraints().add(cc);
         // </editor-fold>
 
         final Label label = new Label("Fat32 Logical Image Analyzer");
 
         //A button with the specified text caption.
-        Button button = new Button();
+        button = new Button();
         button.setText("Clear Table");
 
-        Button buttonExtractSelected = new Button();
+        buttonExtractSelected = new Button();
         buttonExtractSelected.setText("Extract Selected");
 
-        TextArea textArea = new TextArea();
+        textArea = new TextArea();
 
-        table.setMinSize(1100, 200);
-        table.setMaxHeight(250);
-        gridPane.add(this.table, 8, 0, 1, 1);
-        textArea.setMinSize(1100, 360);
-        textArea.setMaxHeight(400);
-        gridPane.add(textArea, 8, 7, 1, 1);
+        table.setMinSize(680, 400);
+        //table.setMaxHeight(250);
+        textArea.setMinSize(680, 360);
+        //textArea.scroll
+        //textArea.setMaxHeight(400);
+        gridPane.add(textArea, gridMiddleX, gridMiddleY, 1, 1);
         //gridPane.add(button, 0, 8, 1, 1);
         //gridPane.add(buttonExtractSelected, 0, 9, 1, 1);
 
@@ -255,24 +293,27 @@ public class Fat32Gui extends Application {
 
         hbox.getChildren().addAll(button, buttonExtractSelected);//, openButton);
 
-        Scene scene = new Scene(tabPane, 1300, 850);
+        Scene scene = new Scene(tabPane, 910, 670);
 
         // primaryStage.setWidth(1000);
         // primaryStage.setHeight(600);
-        primaryStage.setTitle("Fat32 Analyzer");
+        primaryStage.setTitle("Fat32 Analyzer - TurkerFat32");
         primaryStage.setScene(scene);
         // primaryStage.setScene(scene);
-        gridPane.add(hbox, 0, 7, 2, 2);
+
+        gridPane.add(this.table, gridMiddleX, 0, 1, 1);
+
+        gridPane.add(hbox, 0, gridMiddleY, 2, 2);
 
         //gridPane.add(label, 2, 2);
         //layout.getChildren().add(label);
         //layout.getChildren().add(table);
         //Scene scene = new Scene(layout, 300, 250);
-        // Scene scene = new Scene(gridPane, 1300, 850);    
+        // Scene scene = new Scene(gridPane, 1300, 850);
         tab.setContent(gridPane);
 
-        //y(partition);        
-        //TODO http://www.kware.net/?p=204       
+        //y(partition);
+        //TODO http://www.kware.net/?p=204
         //Filtering a JavaFX TreeView
         //Mesela Treedeki dosyalari saklamak istiyorum ama table tarafinda gorunmeleri lazim.
         //Halbuki javafxde saklamak/filtering olmayip remove etmek var ki isime yaramaz oyleyse.
@@ -285,11 +326,78 @@ public class Fat32Gui extends Application {
         slackRootTreeItem = new TreeItem<>();
         slackRootTreeItem.setValue(rootFsNode);
          */
+
+        primaryStage.show();
+
+        // primaryStage.close();
+    }
+
+
+    public void baslaParsellemeye(Stage primaryStage) throws IOException {
+        tab0 = tabPane.getTabs().get(0);
+        tab = tabPane.getTabs().get(1);
+
+
+        tab2 = new Tab();
+        tab2.setText("Filesystem Info");
+        //tab2.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
+        tabPane.getTabs().add(tab2);
+
+        tab3 = new Tab();
+        tab3.setText("FsNode Help");
+        //tab2.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
+        tabPane.getTabs().add(tab3);
+
+        tab4 = new Tab();
+        tab4.setText("FsNode TODO");
+        //tab2.setContent(new Rectangle(200,200, Color.LIGHTSTEELBLUE));
+        tabPane.getTabs().add(tab4);
+
+        Tab tabx = new Tab();
+        tabx.setText("About TurkerFat32");
+        TextArea textAreaAbout = new TextArea();
+        textAreaAbout.setText("2017 - 2023 Turker Ozturk\n\nVisit: https://github.com/turkerozturk/TurkerFat32");
+        tabx.setContent(textAreaAbout);
+        textAreaAbout.setWrapText(true);
+        tabPane.getTabs().add(tabx);
+
+        //bunu, pencerede guncelleme olmazsa cok az resize ederek saglamak icin kullanilyorlarmis ama 3 tane de zarari varmis.
+        //tabPane.getScene().getWindow().setWidth(tabPane.getScene().getWidth() + 0.001);
+
+        textAreaPartitionInformation = new TextArea();
+        textAreaFsNodeHelp = new TextArea();
+        textAreaTodo = new TextArea();
+        textAreaTodo.setWrapText(true);
+        textAreaTodo.setText("TODO Dosya gezgininde klasore ikinci kez tiklayinca da refresh etmesi gerekiyor.\r\n"
+                + "TODO Slackspace için de tree yapısı oluştur.\r\n"
+                + "BİTTİ folder extraction metodu da yaz.\r\n"
+                + "TODO slack extraction metodu da yaz.\r\n"
+                + "TODO gui kodundaki satırları derli toplu hale getir.\r\n"
+                + "TODO herşey bittiğinde sadece kütüphanenin kullanılması için gerekli olan methodları public bırak.\r\n");
+
+        tab4.setContent(textAreaTodo);
+
+
+
+
+
+
+        tab2 = tabPane.getTabs().get(2);
+        tab3 = tabPane.getTabs().get(3);
+        tab4 = tabPane.getTabs().get(4);
+
+
+        logicalDiskImageUri = "C:\\tmp\\fat32images\\USBLogicalFAT321GBFSF.dig"; // bu calisiyor problemsiz. benim olusturdugum imaj.
+
+
+
         // <editor-fold desc="Logical Imajla Baglantili Kodlar" defaultstate="collapsed">
         if (this.logicalDiskImageUri != null) {
 
             partition = new Fat32Partition(logicalDiskImageUri);
+            textAreaPartitionInformation.setWrapText(true);
             textAreaPartitionInformation.setText(partition.showPartitionBootsectorValues());
+            textAreaFsNodeHelp.setWrapText(true);
             textAreaFsNodeHelp.setText(OtherHelper.prettyPrintNodeHelp());
             tab2.setContent(textAreaPartitionInformation);
             tab3.setContent(textAreaFsNodeHelp);
@@ -312,7 +420,8 @@ public class Fat32Gui extends Application {
             //Create treeView
             treeView = new TreeView<>(forensicDiskImageTreeItem);
             treeView.setShowRoot(true);
-            treeView.setMaxHeight(250);
+            treeView.setMinHeight(usttekilerMinHeight);
+            treeView.setMaxWidth(350);
             gridPane.add(this.treeView, 0, 0, 1, 1);
 
             //TREE LOGICAL DATA IMAGE FILE SYSTEM INFORMATION en ust dugumun bir altidir eger mantiksal dd imaj ise
@@ -453,7 +562,7 @@ public class Fat32Gui extends Application {
         unallocatedSpaceTreeItem = new TreeItem<>();
         unallocatedSpaceTreeItem.setValue(unallocatedSpaceFsNode);
         //TODO this.lastSelectedObject = unallocatedSpaceFsNode;
-        
+
         ///FsNode unallocatedSpaceFsNode = new FsNode();
         ///unallocatedSpaceFsNode.setFsNodeFileSystemType(FsNodeFileSystemType.FAT32_UNUSED_SPACE_NODE);
         ///unallocatedSpaceFsNode.setName("[unallocated space]");
@@ -462,7 +571,7 @@ public class Fat32Gui extends Application {
         ///unallocatedSpaceTreeItem = new TreeItem<>();
         ///unallocatedSpaceTreeItem.setValue(unallocatedSpaceFsNode);
         ///this.lastSelectedObject = unallocatedSpaceFsNode;
-         
+
 
         Node unallocatedSpaceIcon = new ImageView(new Image(getClass().getResourceAsStream("/images/partitionicon.png")) {
         });
@@ -543,17 +652,17 @@ public class Fat32Gui extends Application {
 
                             /*
                         ArrayList<Object> contentsDirectory = new ArrayList<>();
-                         
+
                         for (TreeItem<Object> treeItem : selectedTreeItem.getChildren()) {
                             Object object = treeItem.getValue();
                             contentsDirectory.add(object);
                         }
-                                
+
                         final ObservableList<Object> data2 = FXCollections.observableArrayList(
                             contentsDirectory
                         );
-                        
-                        table.setItems(data2);     
+
+                        table.setItems(data2);
                              */
                         }
                     }
@@ -694,15 +803,16 @@ public class Fat32Gui extends Application {
             unallocatedSpaceTreeItem.setGraphic(unallocatedSpaceIcon);
             unallocatedSpaceTreeItem.setExpanded(true);
             unallocatedSpaceContainerTreeItem.getChildren().add(unallocatedSpaceTreeItem);
-        }      
+        }
              */
         } // bitti logical imaj ile baglantili kodlar.
 
         // </editor-fold>
-        primaryStage.show();
 
-        // primaryStage.close();
+
+
     }
+
 
     public void alert(String titleText, String messageText) {
         Alert alert = new Alert(AlertType.INFORMATION);
